fix(hardening): phase 0+1 - verified, honest, safe-by-default (v26.2.0-rc2)
Restores the hardening work silently reverted in f718a8c and fixes the audit
findings. Every change is backed by executed code or reported as PLANNED - no
performance claims, no invented log output.

Critical (was exploitable / destructive):
- PAdmin: loopback-only + mandatory Basic Auth + constant-time compare +
  read-only GET + main-thread snapshot (was unauthenticated on 0.0.0.0)
- updater: two-phase (/vo up <n> -> plan, /vo up confirm -> apply), mandatory
  SHA-256 verification, zip/manifest/paperclip validation, non-destructive jar
  swap, /vo rollback, live-launcher-jar discovery
- update.clean-reinstall off by default (it deleted plugins/, server.properties,
  ops.json, whitelist.json and backups/)
- VoltPurWorldCheck no longer writes server.properties (it wrote online-mode=false)
- ~30 empty catch blocks -> VoltPurGuard (per-module runs/fails/last, first
  failure logged with stack, repeats rate-limited to one per 60s)
- VoltPurHardware: cgroup v2/v1 aware -Xmx (no more host-RAM/2 inside a container)

Honest reporting:
- VoltPurModules: ACTIVE/PARTIAL/PLANNED with live runtime state
- dead config keys, fake modules and the fabricated Pterodactyl boot log removed;
  docs/BENCHMARKS.md lists the withdrawn numbers
- POLICY.md + SECURITY.md restored, README rewritten without invented numbers

Verification (reproducible, in-repo):
- tools/verify/run-verify.sh compiles the VoltPur sources against API stubs
  (JDK 21+) and runs 63 behaviour assertions -> RESULT: PASS
- it caught two real bugs in this same pass: VoltPurGuard.Stat.runs() never
  incremented, and a plugin-download failure was swallowed silently

Not done (explicitly): CI smoke test, automated benchmark generation, standalone
plugin packaging, any NMS patch. The real Gradle build stays on CI/build-fork.sh
(no JDK 25 + Gradle in this environment).